chore: cleanup and add workflow. Co-authored-by: Josef Andersson <josef.andersson@digg.se> Co-authored-by: Björn Molin <extern.bjorn.molin@digg.se>
Signed-off-by: Johannes Dannelov <johannes.dannelov@digg.se>

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,6 @@ tasks.named('test') {
 tasks.withType(Jar) {
     archiveVersion = ''
     archiveFileName = archiveClassifier.get().isEmpty() ? 
-        "eudiw-prototype-issuer.jar" : 
-        "eudiw-prototype-issuer-${archiveClassifier.get()}.jar"
+        "eudiw-wallet-issuer-poc.jar" : 
+        "eudiw-wallet-issuer-poc-${archiveClassifier.get()}.jar"
 }
