--- a/development/megalinter.yml
+++ b/development/megalinter.yml
@@ -40,7 +40,7 @@ ENABLE_LINTERS: [
     YAML_PRETTIER,
   ]
 
-DOCKERFILE_HADOLINT_FILE_NAMES_REGEX: ["Dockerfile.*"]
+DOCKERFILE_HADOLINT_FILE_NAMES_REGEX: ["Containerfile.*"]
 BASH_SHFMT_ARGUMENTS: -i 2
 BASH_SHFMT_FILE_EXTENSIONS: [.sh]
 BASH_SHELLCHECK_FILE_EXTENSIONS: [.sh]
