--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>se.digg</groupId>
-    <artifactId>issuer</artifactId>
+    <artifactId>eudiw-wallet-issuer-poc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
