--- a/.github/workflows/issuerworkflow.yml
+++ b/.github/workflows/issuerworkflow.yml
@@ -27,14 +27,18 @@ jobs:
       contents: read
       security-events: write
     uses: ./.github/workflows/misclint.yml
+  # license:
+  #   uses: ./.github/workflows/license.yml
   test:
     permissions:
       contents: read
-    needs: [commitlint, misclint]
+    needs: [commitlint, misclint, dependencyreviewlint]
     uses: ./.github/workflows/test.yml
   publish-container-image: # only on semver tag
     permissions:
       contents: read
       packages: write
+      id-token: write  # Required for SLSA provenance
+      actions: read
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/publishimage.yml
