--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: Harden GitHub runner
-        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 #v2.10.1
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
         with:
           egress-policy: audit
 
@@ -29,21 +29,20 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v4.2.1
+        uses: actions/setup-java@8df1039502a15bceb9433410b1a100fbe190c53b # v4.5.0
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'temurin'  # Popular Java distribution
           cache: 'gradle'  # Enables Gradle caching
 
       - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3 #v3.5.0
+        uses: gradle/actions/wrapper-validation@cc4fc85e6b35bafd578d5ffbc76a5518407e1af0 # v4
 
       - name: Grant execute permission for gradlew
-        run: chmod +x issuer/gradlew
+        run: chmod +x gradlew
 
       - name: Run tests
         run: |
-          cd ./issuer
           ./gradlew test --no-daemon
 
       # Optional: Publish test results
