--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,57 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
+# ---
+# name: Gradle Test
+
+# on: [workflow_call]  # yamllint disable-line rule:truthy
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   test:
+#     name: Test
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         java-version: ['21'] 
+#         os: [ubuntu-latest]
+
+#     steps:
+#       - name: Harden GitHub runner
+#         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+#         with:
+#           egress-policy: audit
+
+#       - name: Checkout repository
+#         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+#       - name: Set up JDK ${{ matrix.java-version }}
+#         uses: actions/setup-java@8df1039502a15bceb9433410b1a100fbe190c53b # v4.5.0
+#         with:
+#           java-version: ${{ matrix.java-version }}
+#           distribution: 'temurin'  # Popular Java distribution
+#           cache: 'gradle'  # Enables Gradle caching
+
+#       - name: Validate Gradle wrapper
+#         uses: gradle/actions/wrapper-validation@cc4fc85e6b35bafd578d5ffbc76a5518407e1af0 # v4
+
+#       - name: Grant execute permission for gradlew
+#         run: chmod +x gradlew
+
+#       - name: Run tests
+#         run: |
+#           ./gradlew test --no-daemon
+
+      # Optional: Publish test results
+      # - name: Publish Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action@f355d34d53ad4e7f506f699478db2dd71da9de5f # v2.15.1
+      #   if: always()  # Run even if tests fail
+      #   with:
+      #     files: "**/build/test-results/test/TEST-*.xml"
 ---
-name: Gradle Test
+name: Maven Test
 
 on: [workflow_call]  # yamllint disable-line rule:truthy
 
@@ -33,21 +82,15 @@ jobs:
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'temurin'  # Popular Java distribution
-          cache: 'gradle'  # Enables Gradle caching
-
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@cc4fc85e6b35bafd578d5ffbc76a5518407e1af0 # v4
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+          cache: 'maven'  # Enables Maven caching
 
       - name: Run tests
         run: |
-          ./gradlew test --no-daemon
+          mvn clean test
 
       # Optional: Publish test results
       # - name: Publish Test Results
       #   uses: EnricoMi/publish-unit-test-result-action@f355d34d53ad4e7f506f699478db2dd71da9de5f # v2.15.1
       #   if: always()  # Run even if tests fail
       #   with:
-      #     files: "**/build/test-results/test/TEST-*.xml"
+      #     files: "**/target/surefire-reports/TEST-*.xml"
