--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,12 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
+# TO-DO: make this part of jrelaser flow instead
+
 name: Publish Container Image with SLSA
 
-on: [workflow_call] # yamllint disable-line rule:truthy
+on:
+  workflow_call: # yamllint disable-line rule:truthy
 
 env:
   REGISTRY: ghcr.io
