--- a/.github/workflows/pullrequest-workflow.yml
+++ b/.github/workflows/pullrequest-workflow.yml
@@ -8,19 +8,17 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
   pull_request:
     branches:
       - main
+
+permissions:
+  contents: read
+
 jobs:
   commitlint:
-    permissions:
-      contents: read
     uses: ./.github/workflows/commitlint.yml
   dependencyreviewlint:
-    permissions:
-      contents: read
     uses: ./.github/workflows/dependencyreview.yml
   misclint:
     permissions:
@@ -32,13 +30,7 @@ jobs:
   test:
     permissions:
       contents: read
-    needs: [commitlint, misclint, dependencyreviewlint]
+      packages: read
+    if: always()
+    needs: [commitlint, dependencyreviewlint]
     uses: ./.github/workflows/test.yml
-  publish-container-image: # only on semver tag
-    permissions:
-      contents: read
-      packages: write
-      id-token: write  # Required for SLSA provenance
-      actions: read
-    if: startsWith(github.ref, 'refs/tags/v')
-    uses: ./.github/workflows/publishimage.yml
