--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,12 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
+# TO-DO: make this part of jrelaser flow instead
+
 name: Publish Container Image with SLSA
 
-on: [workflow_call] # yamllint disable-line rule:truthy
+on:
+  workflow_call: # yamllint disable-line rule:truthy
 
 env:
   REGISTRY: ghcr.io
@@ -36,9 +39,16 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3
 
+      - name: Download JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-jar
+          path: target
+      
       - name: Verify Build Platform Support
         run: |
           echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
+          ls -R 
 
       - name: Authenticate with Registry
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3
@@ -64,6 +74,7 @@ jobs:
         id: build
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6
         with:
+          context: .
           file: Containerfile
           platforms: linux/amd64,linux/arm64
           push: true
