chore: add work-around in order to handle a bug in openapi gen lib when multiple Accept types
Signed-off-by: Bjorn Molin <extern.bjorn.molin@digg.se>

--- a/endpoints-api-modified.yaml
+++ b/endpoints-api-modified.yaml
@@ -335,31 +335,30 @@ paths:
           schema:
             $ref: '#/components/schemas/EntityTypes'
       responses:
+#        400:
+#          description: Bad Request
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponse'
+#        404:
+#          description: Not Found
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponse'
+#        500:
+#          description: Server Error
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponse'
         200:
           description: OK
           content:
             application/resolve-response+jwt:
               schema:
                 type: string
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        404:
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        500:
-          description: Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-
   /{name}/discovery:
     get:
       description: Discovery endpoint
